--- a/css/admin.css
+++ b/css/admin.css
@@ -20,6 +20,7 @@ tr:nth-child(even) {
     align-items: left;
     /* min-width: 300px;
     min-height: 100%; */
+    position: sticky;
     height: 100vh;
     width: 20%;
     float: left;
@@ -53,6 +54,33 @@ tr:nth-child(even) {
 .html, .body{
     background-color: #2C3E50;
 }
+.addProductsMenu{
+    flex-wrap: wrap;
+}
+.addProducts{
+    margin: 10px;
+    background-color: #2C3E50;
+    border-radius: 10px;
+    width: auto;
+    max-width: 200px;
+    border: 10px;
+}
+.addProducts:hover{
+    background-color: #3498db;
+    transition-duration: 0.4s;
+}
+.addProductPic{
+    margin: auto;
+    display: block;
+    max-width: 100px;
+    width: auto;
+}
+.addProductButton{
+    background-color: transparent;
+    border: 0px;
+    border-radius: 10px;
+    color: #E74C3C;
+} 
 
 @media screen and (max-width: 600px) {
     .dash{
